Completa a secao 2 e mapeia a certificacao Java SE 25
Complementa o material da secao 2 com o que faltava em relacao a grade
do curso e acrescenta o recorte cobrado pelo exame 1Z0-831.

- A1: cadencia semestral, LTS, JEPs e correcao dos recursos por versao
- A3: distincao JDK/JRE/JVM, ferramentas, componentes da JVM, classpath
  versus module path e distribuicoes do OpenJDK
- A4: exemplos de package, import, module-info.java, regras de arquivo
  fonte e importacao de modulo do Java 25
- A5: metodo main detalhado, argumentos de linha de comando, compilacao
  pela linha de comando e erros comuns
- A6: novo material de instalacao do JDK, escolha e configuracao da IDE
- A7: novo material sobre JEP 512 e JEP 511, com ordem de escolha do
  ponto de entrada e a classe java.lang.IO
- A8: novo material relacionando a secao aos objetivos do 1Z0-831,
  incluindo o que nao cai na prova e questoes de exemplo
- README da secao no padrao da secao 1 e nota no README raiz sobre a
  inexistencia de um repositorio ocpj25-book

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>